Adding product endpoints
